update : feat(kelola jenis sampah)
