# src/index.js
@@ -10,6 +10,7 @@ const authRoutes = require("./routes/authRoutes");
 const setorRoutes = require("./routes/setorRoutes");
 const profileRoutes = require("./routes/profileRoutes");
 const manajemenAkunRoutes = require("./routes/manajemenAkunRoutes");
+const kategoriSampahRoutes = require("./routes/kategoriSampahRoutes");
 
 const app = express();
 
@@ -35,7 +36,9 @@ app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 app.use("/api/auth", authRoutes);
 app.use("/api/setor", setorRoutes);
 app.use("/api/profile", profileRoutes);
+``;
 app.use("/api/manajemen-akun", manajemenAkunRoutes);
+app.use("/api/jenis-sampah", kategoriSampahRoutes);
 
 app.get("/", (req, res) => {
   res.json({
